data(light-tail): cross-validate vs §7 — retract the quarkus 1s claim; §7's unpublished p99.9 is the real result
Mined §7 (20260723-155158-latency-curve-triad), which RECORDS latency_p999_us in every leaf but published p99
only. Two consequences:

RETRACTION. This bundle claimed "quarkus-tuned has the REAL tail problem (p99.9 913ms)". §7 measures p99.9 =
12.22ms for quarkus-tuned at the SAME 30k rung (lean-co-resident pair-1, n=2). The 913ms is a single-event
outlier, not a property: at 30k x 300s = 9M requests, ONE ~1s stall delays every request scheduled during it
(~30k = 0.33% > 0.1%), which alone drives p99.9 -> ~913ms and p99.99/max -> ~1.0s. §7's 120s windows are less
likely to catch it. Downgraded to an open question with a frequency-settling protocol; NOT a quarkus claim.

NEW RESULT (from §7's own gated data). At p99.9 exeris is FLAT 1.94-2.60ms while both quarkus arms run 3-8x
higher across the ENTIRE ladder from 6k up:
  rung   exeris  qtuned  qhib      (p99.9 ms, clean pairs, n=2 each)
   6k     1.96    6.38   5.81
  12k     1.98    8.34   9.86
  18k     1.94   10.96   9.93
  24k     2.52   10.61  11.05
  30k     2.60   12.22  19.91
§7's published p99 shows separation only emerging at 24-30k, so §7 UNDER-states its own light conclusion.

CONSISTENCY. exeris @30k: §7 p99 2.16 / p99.9 2.60 vs this run 2.03 / 2.36 (different campaign, window, heap;
single-target marginally tighter, as §7's co-residence thesis predicts). Saturation reproduced near-exactly:
§7 probe 44.3k/~48k/~57k vs clean diagnostic 44334/48492/57830. This run extends past §7's 30k top: exeris
p99.9 4.12ms at 48k (84% of ceiling) - flatness holds. Heavy p99.9 @10k (exeris 37/40 vs qtuned 13.8; qhib
pair-3 99.7 vs pair-2 31.3) reproduces §7's "heavier neighbor -> fatter tail" signature; §7's reading stands.

Verified this run is truly single-target (one target-app, no co-locator) - the isolated reference §7 noted its
pairwise harness could not provide. Adds extract-s7-p999.py + mined light/h